# dataclass_to_diagram

./: .flake8  .gitignore  README.md  imdone-tasks.md  pyproject.toml  test_file
.imdone/: config.yml
dataclass_to_diagram/: __init__.py  __main__.py  exceptions.py  typings.py
dataclass_to_diagram/converters/: __init__.py  base_converter.py  dbml.py  kroki_c4_puml.py  kroki_request.py
dataclass_to_diagram/dia/c4/: base.py  c4.py
dataclass_to_diagram/exporters/: __init__.py  base_exporter.py
dataclass_to_diagram/exporters/c4_to_plantuml/: base_element_to_puml.py  c4_to_puml.py  component_to_puml.py  container_to_puml.py  context_to_puml.py  exporter.py  rel_to_puml.py
dataclass_to_diagram/exporters/erd_to_dbml/: exporter.py
dataclass_to_diagram/main/: __init__.py  main.py  prepare_target_folder.py
dataclass_to_diagram/main/convert/: convert.py
dataclass_to_diagram/models/: __init__.py  base_model.py
diagrams/src/: test.puml
docs/: develop.md  how_to_use.md  tech_req.md  todo.md
examples/: test.md
konstantin_docs/: main.py
konstantin_docs/dia/: base.py  c4.py  nwdiag.py
konstantin_docs/erd/: __init__.py  erd.py
konstantin_docs/erd_to_dbml/: column.py  database.py  enum.py  note.py  project_definition.py  relation.py  table.py  table_group.py
konstantin_docs/main/: main.py
test/dia_src/: main.py  test_c4.py
tests/erd/: test_database.py
tests/erd_to_dbml/: column_test.py  database_test.py  enum_test.py  note_test.py  project_definition_test.py  relation_test.py  table_group_test.py  table_test.py
thunder-tests/: thunderActivity.json
(+110 files in other folders)
