[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.black]
line-length = 80


[tool.poetry]
authors = ["konstantin-dudersky <konstantin.dudersky@gmail.com>"]
description = "Генерация документации"
name = "konstantin_docs"
readme = "README.md"
repository = "https://github.com/Konstantin-Dudersky/konstantin_docs"
version = "0.0.15"


[tool.poetry.dependencies]
python = "^3.11"
requests = "*"
typing_extensions = "*"


[tool.poetry.group.dev.dependencies]
black = "*"
poethepoet = "*"
pytest = "*"
wemake-python-styleguide = "0.17.0"


[tool.poetry.scripts]
start = "konstantin_docs.__main__:start"


[tool.poe.tasks]
docs = { script = "konstantin_docs.main:generate_images(path_src='test/dia_src', path_dist='test/dia_dist')" }
lint = ["lint_pyright", "lint_flake8"]
lint_flake8 = { shell = 'flake8 konstantin_docs/' }
lint_pyright = { shell = 'pyright' }


[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = true
stubPath = '.venv/typings/'
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"


[tool.pytest.ini_options]
testpaths = ["tests"]
log_format = "%(levelname)s: %(asctime)s.%(msecs)03d | %(name)s:%(lineno)d - %(funcName)s\n-> %(message)s"
log_date_format = "%H:%M:%S"
